# RAGfile

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: __init__.py  main.py
app/api/: __init__.py
app/api/routes/: __init__.py  documents.py  health.py  rag.py
app/core/: __init__.py  config.py  dependencies.py  logging.py  test.py
app/models/: __init__.py  chat.py  chunk.py  document.py  retrieval.py
app/repositories/: __init__.py  faiss_store.py  sqlite_store.py
app/services/: __init__.py  chunker.py  document_parser.py  embedding_service.py  index_service.py  llm_service.py  rag_chat_service.py  retriever_service.py  text_normalizer.py
frontend/: streamlit_app.py
tests/: test_chunker.py  test_document_parser.py  test_documents_api.py  test_embedding_service.py  test_health.py  test_indexing.py  test_llm_and_chat_service.py  test_rag_api.py  test_retriever_service.py
